--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Grå Gåsen Out</span></a>
           </p>
           <h2 class="dh2">Hidden tracks</h2>
-          <p class="dbody1">Kommer ni redan på fredag så har vi en uppsamling med enklare middag på hemlig plats. OSA 30/6 till jessica.couet@gmail.com.<br><br>Kvar söndag kväll? Häng med oss på restaurang Guldkaggen i Burgsviks hamn. Drop-in! Inget OSA behövs.</p>
+          <p class="dbody1">Fredag 25/8:<br>För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!</p>
+         
         </div>
       </div>
     </div>
