--- a/index.html
+++ b/index.html
@@ -161,8 +161,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Grå Gåsen Out</span></a>
           </p>
           <h2 class="dh2">Hidden tracks</h2>
-          <p class="dbody1">Fredag 25/8:<br>För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!</p>
-         
+          <p class="dbody1">
+            Fredag 25/8:<br>
+            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br>
+            Lördag 26/7:<br>
+            Äntligen fest! Partybussen kör våra hotellgäster till och från festen, se körschema nedan:<br><br>
+            17.20 Gåsen Out<br>
+            17.25 Grå Gåsen hotell<br>
+            17.45 Holmhällar Pensionat<br>
+            18.00 Festladan, Öja Lasses 324 (alla gäster kliver av)<br><br>
+
+            02.00 Festladan, Öja Lasses 324 (alla kliver på och bussen kör sedan till Holmhällar, Gåsen Hotell & Gåsen Out)<br><br>
+
+            (För de som önskar kan egen skjuts bokas till/från festen via Taxi Söder 0498-20 80 80.)<br><br>
+
+            Ses på festen! Vi längtar!!!
+                </p>
         </div>
       </div>
     </div>
