--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 class="dh2">Hidden tracks</h2>
           <p class="dbody1">
             Fredag 25/8:<br>
-            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br>
+            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br><br>
             Lördag 26/7:<br>
             Äntligen fest! Partybussen kör våra hotellgäster till och från festen, se körschema nedan:<br><br>
             17.20 Gåsen Out<br>
