--- a/index.html
+++ b/index.html
@@ -152,19 +152,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="column-661 w-col w-col-5 w-col-stack">
         <div class="div-block-151">
-          <h2 class="dh2">A-Side<br></h2>
-          <p class="dbody1">Fram med dansskorna, på med de utsvängda brallorna, västen och 70-talsbrillorna! Vi firar våra 50 år på jorden med bubbel ”en masse”, mat från grillen och sköna sommarvibes från 70-talet.<br><br>Lördag 26 augusti, klockan 18.00 Couets lada, Öja Lasses 324, Burgsvik Gotland <br>Klädsel: 70-talssommar</p>
-          <h2 class="dh2">B-Side</h2>
-          <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br><br>
-            <a href="https://www.holmhallar.se/" target="_blank"><span class="text-span-ul">Holmhällar Pensionat</span></a> - Uppge ”Jessicas &amp; Danyels fest”<br>
-            <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Hotell Grå Gåsen</span></a><br>
-            <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Grå Gåsen Out</span></a>
-          </p>
-          <h2 class="dh2">Hidden tracks</h2>
+          <h2 class="dh2">Fredag 25/8<br></h2>
           <p class="dbody1">
-            Fredag 25/8:<br>
-            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 19.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br><br>
-            Lördag 26/7:<br>
+            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 18.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br></p>
+          <h2 class="dh2">Lördag 26/8</h2>
+          <p class="dbody1">Fram med dansskorna, på med de utsvängda brallorna, västen och 70-talsbrillorna! Vi firar våra 50 år på jorden med bubbel ”en masse”, mat från grillen och sköna sommarvibes från 70-talet.<br><br>Lördag 26 augusti, klockan 18.00<br> Couets lada, Öja Lasses 324, Burgsvik Gotland <br>Klädsel: 70-talssommar<br><br>
             Äntligen fest! Partybussen kör våra hotellgäster till och från festen, se körschema nedan:<br><br>
             17.20 Gåsen Out<br>
             17.25 Grå Gåsen hotell<br>
@@ -177,6 +169,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             Ses på festen! Vi längtar!!!
                 </p>
+          <h2 class="dh2">Boendetips</h2>
+          <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br><br>
+            <a href="https://www.holmhallar.se/" target="_blank"><span class="text-span-ul">Holmhällar Pensionat</span></a> - Uppge ”Jessicas &amp; Danyels fest”<br>
+            <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Hotell Grå Gåsen</span></a><br>
+            <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Grå Gåsen Out</span></a>
+          </p>
+          
+            
         </div>
       </div>
     </div>
