--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-151">
           <h2 class="dh2">Fredag 25/8<br></h2>
           <p class="dbody1">
-            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 18.00- ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br></p>
+            För er som kommer ner redan under fredagen har vi en enklare grillkväll samt gårdsvisning 18.00 - ca 22.00 på Sibbjäns Gård, Vamlingbo Sibbjäns 102, ca 5 km söder om Burgsvik. Varmt Välkomna!<br></p>
           <h2 class="dh2">Lördag 26/8</h2>
           <p class="dbody1">Fram med dansskorna, på med de utsvängda brallorna, västen och 70-talsbrillorna! Vi firar våra 50 år på jorden med bubbel ”en masse”, mat från grillen och sköna sommarvibes från 70-talet.<br><br>Lördag 26 augusti, klockan 18.00<br> Couets lada, Öja Lasses 324, Burgsvik Gotland <br>Klädsel: 70-talssommar<br><br>
             Äntligen fest! Partybussen kör våra hotellgäster till och från festen, se körschema nedan:<br><br>
             17.20 Gåsen Out<br>
             17.25 Grå Gåsen hotell<br>
             17.45 Holmhällar Pensionat<br>
-            18.00 Festladan, Öja Lasses 324 (alla gäster kliver av)<br><br>
-
-            02.00 Festladan, Öja Lasses 324 (alla kliver på och bussen kör sedan till Holmhällar, Gåsen Hotell & Gåsen Out)<br><br>
-
-            (För de som önskar kan egen skjuts bokas till/från festen via Taxi Söder 0498-20 80 80.)<br><br>
-
+            18.00 Festladan, Öja Lasses 324 (alla gäster kliver av)<br>
+            02.00 Festladan, Öja Lasses 324 (alla kliver på och bussen kör sedan till Holmhällar, Gåsen Hotell & Gåsen Out)<br>
+            (För de som önskar kan egen skjuts bokas till/från festen via Taxi Söder 0498-20 80 80.)<br>
             Ses på festen! Vi längtar!!!
+                </p>
+          <h2 class="dh2">Söndag 27/8</h2>
+          <p class="dbody1">För er som är kvar på söndagen - välkomna på bartömning på Restaurang Guldkaggen i Burgsviks hamn. Ingen OSA behövs. Tid publiceras här inom kort
                 </p>
           <h2 class="dh2">Boendetips</h2>
           <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br><br>
