--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="dbody1">För er som är kvar på söndagen - välkomna på bartömning på Restaurang Guldkaggen i Burgsviks hamn. Ingen OSA behövs. Tid publiceras här inom kort
                 </p>
           <h2 class="dh2">Boendetips</h2>
-          <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br><br>
+          <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br>
             <a href="https://www.holmhallar.se/" target="_blank"><span class="text-span-ul">Holmhällar Pensionat</span></a> - Uppge ”Jessicas &amp; Danyels fest”<br>
             <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Hotell Grå Gåsen</span></a><br>
             <a href="documents/Danyel--Jessica.pdf" target="_blank"><span class="text-span-ul">Grå Gåsen Out</span></a>
