--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Ses på festen! Vi längtar!!!
                 </p>
           <h2 class="dh2">Söndag 27/8</h2>
-          <p class="dbody1">För er som är kvar på söndagen - välkomna på bartömning på Restaurang Guldkaggen i Burgsviks hamn. Ingen OSA behövs. Tid publiceras här inom kort
+          <p class="dbody1">För er som är kvar på söndagen - välkomna på bartömning klockan 14:00 på Restaurang Guldkaggen i Burgsviks hamn. Ingen OSA behövs.
                 </p>
           <h2 class="dh2">Boendetips</h2>
           <p class="dbody1">Boendetips - boka gärna så snart ni vet att ni kommer!<br>
